--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ projectLeaderName=Asterios Raptis
 slash=/
 colon=:
 issuesPath=/issues
-projectDescription=Template project for create java library projects
+projectDescription=This project holds pojo classes for migrate maven projects to gradle projects and adapt them
 projectScmProviderDomain=github.com
 projectScmProviderUrl=https://github.com/
 projectScmGitUrlPrefix=scm:git:git:@
@@ -34,16 +34,16 @@ licenseGradlePluginVersion=0.15.0
 # dependencies versions #
 #########################
 lombokVersion=1.18.16
+sillyCollectionsVersion=8.4
+sillyIoVersion=1.4
+sillyStringsVersion=5.5
+fileWorkerVersion=6
+commonsTextVersion=1.9
 ##############################
 # test dependencies versions #
 ##############################
-fileWorkerVersion=6
 commonsLang3Version=3.11
-commonsTextVersion=1.9
-sillyCollectionsVersion=8.4
-sillyIoVersion=1.4
 throwAbleVersion=1.6
-sillyStringsVersion=5.5
 meanbeanVersion=2.0.3
 junitJupiterVersion=5.7.0
 ##########################
