--- a/build.gradle
+++ b/build.gradle
@@ -188,13 +188,13 @@ dependencies {
     annotationProcessor("org.projectlombok:lombok:$lombokVersion")
     testCompileOnly("org.projectlombok:lombok:$lombokVersion")
     testAnnotationProcessor("org.projectlombok:lombok:$lombokVersion")
-    testImplementation("io.github.astrapi69:silly-io:$sillyIoVersion")
-    testImplementation("de.alpharogroup:silly-strings:$sillyStringsVersion")
-    testImplementation("de.alpharogroup:silly-collections:$sillyCollectionsVersion")
-    testImplementation("org.apache.commons:commons-lang3:$commonsLang3Version")
-    testImplementation("org.apache.commons:commons-text:$commonsTextVersion")
-    testImplementation("io.github.astrapi69:file-worker:$fileWorkerVersion")
+    implementation("org.apache.commons:commons-text:$commonsTextVersion")
+    implementation("io.github.astrapi69:silly-io:$sillyIoVersion")
+    implementation("io.github.astrapi69:file-worker:$fileWorkerVersion")
+    implementation("de.alpharogroup:silly-strings:$sillyStringsVersion")
+    implementation("de.alpharogroup:silly-collections:$sillyCollectionsVersion")
     testImplementation("io.github.astrapi69:throw-able:$throwAbleVersion")
+    testImplementation("org.apache.commons:commons-lang3:$commonsLang3Version")
     testImplementation("org.meanbean:meanbean:$meanbeanVersion")
     testImplementation("org.junit.jupiter:junit-jupiter-api:$junitJupiterVersion")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:$junitJupiterVersion")
