changed all dependencies from groupid de.alpharogroup to new groupid io.github.astrapi69

--- a/build.gradle
+++ b/build.gradle
@@ -190,8 +190,8 @@ dependencies {
     implementation("org.apache.commons:commons-text:$commonsTextVersion")
     implementation("io.github.astrapi69:silly-io:$sillyIoVersion")
     implementation("io.github.astrapi69:file-worker:$fileWorkerVersion")
-    implementation("de.alpharogroup:silly-strings:$sillyStringsVersion")
-    implementation("de.alpharogroup:silly-collections:$sillyCollectionsVersion")
+    implementation("io.github.astrapi69:silly-strings:$sillyStringsVersion")
+    implementation("io.github.astrapi69:silly-collections:$sillyCollectionsVersion")
     testImplementation("io.github.astrapi69:throw-able:$throwAbleVersion")
     testImplementation("org.apache.commons:commons-lang3:$commonsLang3Version")
     testImplementation("org.meanbean:meanbean:$meanbeanVersion")
