--- a/gradle.properties
+++ b/gradle.properties
@@ -33,19 +33,19 @@ licenseGradlePluginVersion=0.16.1
 #########################
 # dependencies versions #
 #########################
-lombokVersion=1.18.20
-sillyCollectionsVersion=8.7
-sillyIoVersion=1.4
-sillyStringsVersion=5.6
-fileWorkerVersion=5.9
+lombokVersion=1.18.22
+sillyCollectionsVersion=18
+sillyIoVersion=1.6
+sillyStringsVersion=8
+fileWorkerVersion=5.10
 commonsTextVersion=1.9
 ##############################
 # test dependencies versions #
 ##############################
 commonsLang3Version=3.12.0
-throwAbleVersion=1.6
+throwAbleVersion=1.7
 meanbeanVersion=2.0.3
-junitJupiterVersion=5.7.2
+junitJupiterVersion=5.8.1
 ##########################
 # for deploy on sonatype #
 ##########################
