update to jdk version 17
- update gradle to new version 8.4
- update of dependency lombok to new version 1.18.30
- update gradle-plugin dependency of com.github.ben-manes:gradle-versions-plugin to new version 0.49.0
- new gradle plugin dependency of 'com.diffplug.spotless:spotless-plugin-gradle' to minor version 6.22.0
- update of dependency silly-collections to new version 27
- update of dependency silly-io to new version 2.2
- update of dependency silly-strings to new version 9
- update of dependency file-worker to new version 17.1
- update of test dependency commons-lang3 to new version 3.13.0
- update of test dependency junit-jupiter-api to new version 5.10.0

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,8 +3,8 @@
 ######################
 projectVersion=1.4-SNAPSHOT
 groupPackage=io.github.astrapi69
-projectSourceCompatibility=11
-projectInceptionYear=2021
+projectSourceCompatibility=17
+projectInceptionYear=2023
 projectHolderUsername=astrapi69
 projectLeaderName=Asterios Raptis
 slash=/
@@ -30,26 +30,26 @@ projectRepositoriesSnapshotsName=Sonatype Nexus Snapshots
 ###########################
 # gradle-plugins versions #
 ###########################
-gradlePluginVersionsVersion=0.42.0
+gradlePluginVersionsVersion=0.49.0
 licenseGradlePluginVersion=0.16.1
-grgitGradlePluginVersion=5.0.0
-spotlessGradlePluginVersion=6.11.0
+grgitGradlePluginVersion=5.2.0
+spotlessGradlePluginVersion=6.22.0
 #########################
 # dependencies versions #
 #########################
-lombokVersion=1.18.24
-sillyCollectionVersion=20.1
-sillyIoVersion=2.1
-sillyStringsVersion=8.2
-fileWorkerVersion=11.3
+lombokVersion=1.18.30
+sillyCollectionVersion=27
+sillyIoVersion=2.2
+sillyStringsVersion=9
+fileWorkerVersion=17.1
 commonsTextVersion=1.10.0
 ##############################
 # test dependencies versions #
 ##############################
-commonsLang3Version=3.12.0
+commonsLang3Version=3.13.0
 throwableVersion=2.3
-meanbeanVersion=2.0.3
-junitJupiterVersion=5.9.1
+meanbeanVersion=3.0.0-M9
+junitJupiterVersion=5.10.0
 ##########################
 # for deploy on sonatype #
 ##########################
