--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 ######################
 # project properties #
 ######################
-projectVersion=1.4-SNAPSHOT
+projectVersion=2
 groupPackage=io.github.astrapi69
 projectSourceCompatibility=17
 projectInceptionYear=2023
