--- a/gradle.properties
+++ b/gradle.properties
@@ -30,26 +30,28 @@ projectRepositoriesSnapshotsName=Sonatype Nexus Snapshots
 ###########################
 # gradle-plugins versions #
 ###########################
-gradlePluginVersionsVersion=0.49.0
+gradlePluginVersionsVersion=0.51.0
 licenseGradlePluginVersion=0.16.1
-grgitGradlePluginVersion=5.2.0
-spotlessGradlePluginVersion=6.22.0
+grgitGradlePluginVersion=5.2.2
+spotlessGradlePluginVersion=6.25.0
 #########################
 # dependencies versions #
 #########################
-lombokVersion=1.18.30
+lombokVersion=1.18.32
 sillyCollectionVersion=27
-sillyIoVersion=2.2
+sillyBeanVersion=2
+sillyIoVersion=3
 sillyStringsVersion=9
 fileWorkerVersion=17.1
-commonsTextVersion=1.10.0
+commonsTextVersion=1.12.0
+jacksonDataformatTomlVersion=2.17.0
 ##############################
 # test dependencies versions #
 ##############################
-commonsLang3Version=3.13.0
+commonsLang3Version=3.14.0
 throwableVersion=2.3
 meanbeanVersion=3.0.0-M9
-junitJupiterVersion=5.10.0
+junitJupiterVersion=5.11.0-M1
 ##########################
 # for deploy on sonatype #
 ##########################
