--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -4,11 +4,13 @@ dependencies {
     annotationProcessor("org.projectlombok:lombok:$lombokVersion")
     testCompileOnly("org.projectlombok:lombok:$lombokVersion")
     testAnnotationProcessor("org.projectlombok:lombok:$lombokVersion")
+    implementation("com.fasterxml.jackson.dataformat:jackson-dataformat-toml:$jacksonDataformatTomlVersion")
     implementation("org.apache.commons:commons-text:$commonsTextVersion")
     implementation("io.github.astrapi69:silly-io:$sillyIoVersion")
     implementation("io.github.astrapi69:file-worker:$fileWorkerVersion")
     implementation("io.github.astrapi69:silly-strings:$sillyStringsVersion")
     implementation("io.github.astrapi69:silly-collection:$sillyCollectionVersion")
+    implementation("io.github.astrapi69:silly-bean:$sillyBeanVersion")
     testImplementation("io.github.astrapi69:throwable:$throwableVersion")
     testImplementation("org.apache.commons:commons-lang3:$commonsLang3Version")
     testImplementation("com.github.meanbeanlib:meanbean:$meanbeanVersion")
