--- a/gradle.properties
+++ b/gradle.properties
@@ -50,6 +50,7 @@ jacksonDataformatTomlVersion=2.17.0
 ##############################
 commonsLang3Version=3.14.0
 throwableVersion=2.3
+mockitoCoreVersion=5.11.0
 meanbeanVersion=3.0.0-M9
 junitJupiterVersion=5.11.0-M1
 ##########################
