--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -14,6 +14,7 @@ dependencies {
     testImplementation("io.github.astrapi69:throwable:$throwableVersion")
     testImplementation("org.apache.commons:commons-lang3:$commonsLang3Version")
     testImplementation("com.github.meanbeanlib:meanbean:$meanbeanVersion")
+    testImplementation("org.mockito:mockito-core:$mockitoCoreVersion")
     testImplementation("org.junit.jupiter:junit-jupiter:$junitJupiterVersion")
     testRuntimeOnly("org.junit.platform:junit-platform-launcher")
 }
