--- a/gradle.properties
+++ b/gradle.properties
@@ -27,33 +27,11 @@ projectRepositoriesUserNameKey=ossrhUsername
 projectRepositoriesPasswordKey=ossrhPassword
 projectRepositoriesReleasesName=Sonatype Nexus Releases
 projectRepositoriesSnapshotsName=Sonatype Nexus Snapshots
-###########################
-# gradle-plugins versions #
-###########################
-gradlePluginVersionsVersion=0.51.0
-licenseGradlePluginVersion=0.16.1
-grgitGradlePluginVersion=5.2.2
-spotlessGradlePluginVersion=6.25.0
-#########################
-# dependencies versions #
-#########################
-lombokVersion=1.18.32
-sillyCollectionVersion=27
-sillyBeanVersion=2
-sillyIoVersion=3
-sillyStringsVersion=9
-fileWorkerVersion=17.1
-commonsTextVersion=1.12.0
-jacksonDataformatTomlVersion=2.17.0
-##############################
-# test dependencies versions #
-##############################
-commonsLang3Version=3.14.0
-throwableVersion=2.3
-mockitoCoreVersion=5.11.0
-meanbeanVersion=3.0.0-M9
-junitJupiterVersion=5.11.0-M1
 ##########################
 # for deploy on sonatype #
 ##########################
 systemProp.org.gradle.internal.publish.checksums.insecure=true
+org.gradle.caching = true
+org.gradle.parallel = true
+org.gradle.configureondemand = true
+org.gradle.vfs.watch = true
