--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -17,7 +17,7 @@ silly-bean-version = "2"
 silly-collection-version = "27"
 silly-io-version = "3"
 silly-strings-version = "9"
-spotless-plugin-gradle-version = "6.25.0"
+spotless-plugin-gradle-version = "7.0.0.BETA1"
 throwable-version = "2.3"
 
 [libraries]
