--- a/gradle.properties
+++ b/gradle.properties
@@ -27,6 +27,7 @@ projectRepositoriesUserNameKey=ossrhUsername
 projectRepositoriesPasswordKey=ossrhPassword
 projectRepositoriesReleasesName=Sonatype Nexus Releases
 projectRepositoriesSnapshotsName=Sonatype Nexus Snapshots
+projectRepositoriesMavenUrl=https://plugins.gradle.org/m2/
 ##########################
 # for deploy on sonatype #
 ##########################
