added new class MigrateToTomlVersions that provides methods for migrate to new gradle project with libs.versions.toml file

--- a/build.gradle
+++ b/build.gradle
@@ -47,7 +47,7 @@ tasks.withType(JavaCompile).configureEach { javaCompiler ->
     // uncomment the next line for build with compiler argument -Xlint:deprecation
     // options.compilerArgs << "-Xlint:deprecation"
     // uncomment the next line for build with compiler argument -Xlint:unchecked
-    // options.compilerArgs << "-Xlint:unchecked"
+     options.compilerArgs << "-Xlint:unchecked"
 }
 
 tasks.named("test") {
