--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,6 +9,7 @@ gradle-plugin-spotless-version = "7.0.0.BETA1"
 gradle-plugin-version-catalog-update-version = "0.8.4"
 gradle-plugin-versions-version = "0.51.0"
 jackson-dataformat-toml-version = "2.17.1"
+jgit-version = "6.10.0.202406032230-r"
 junit-jupiter-version = "5.11.0-M2"
 junit-platform-launcher-version = "1.11.0-M2"
 lombok-version = "1.18.32"
@@ -22,6 +23,7 @@ test-object-version = "8.2"
 throwable-version = "2.3"
 
 [libraries]
+jgit = {module="org.eclipse.jgit:org.eclipse.jgit", version.ref="jgit-version"}
 commons-lang3 = { module = "org.apache.commons:commons-lang3", version.ref = "commons-lang3-version" }
 commons-text = { module = "org.apache.commons:commons-text", version.ref = "commons-text-version" }
 file-worker = { module = "io.github.astrapi69:file-worker", version.ref = "file-worker-version" }
