new class GitExtensions that provides methods for git operations to a Git repository
- new package-info.java files for all packages

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,17 +1,17 @@
 [versions]
-commons-lang3-version = "3.14.0"
+commons-lang3-version = "3.16.0"
 commons-text-version = "1.12.0"
-file-worker-version = "17.2"
+file-worker-version = "17.4"
 gradle-plugin-grgit-version = "5.2.2"
 gradle-plugin-license-version = "0.16.1"
-gradle-plugin-lombok-version = "8.6"
+gradle-plugin-lombok-version = "8.7.1"
 gradle-plugin-spotless-version = "7.0.0.BETA1"
 gradle-plugin-version-catalog-update-version = "0.8.4"
 gradle-plugin-versions-version = "0.51.0"
-jackson-dataformat-toml-version = "2.17.1"
+jackson-dataformat-toml-version = "2.17.2"
 jgit-version = "6.10.0.202406032230-r"
-junit-jupiter-version = "5.11.0-M2"
-junit-platform-launcher-version = "1.11.0-M2"
+junit-jupiter-version = "5.11.0-RC1"
+junit-platform-launcher-version = "1.11.0-RC1"
 lombok-version = "1.18.34"
 meanbean-version = "3.0.0-M9"
 mockito-core-version = "5.12.0"
