--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,22 +1,22 @@
 [versions]
-commons-lang3-version = "3.16.0"
+commons-lang3-version = "3.17.0"
 commons-text-version = "1.12.0"
 file-worker-version = "17.4"
 gradle-plugin-grgit-version = "5.2.2"
 gradle-plugin-license-version = "0.16.1"
-gradle-plugin-lombok-version = "8.7.1"
-gradle-plugin-spotless-version = "7.0.0.BETA1"
+gradle-plugin-lombok-version = "8.10"
+gradle-plugin-spotless-version = "7.0.0.BETA2"
 gradle-plugin-version-catalog-update-version = "0.8.4"
 gradle-plugin-versions-version = "0.51.0"
-jackson-dataformat-toml-version = "2.17.2"
+jackson-dataformat-toml-version = "2.18.0-rc1"
 jgit-version = "6.10.0.202406032230-r"
-junit-jupiter-version = "5.11.0-RC1"
-junit-platform-launcher-version = "1.11.0-RC1"
+junit-jupiter-version = "5.11.0"
+junit-platform-launcher-version = "1.11.0"
 lombok-version = "1.18.34"
 meanbean-version = "3.0.0-M9"
-mockito-core-version = "5.12.0"
+mockito-core-version = "5.13.0"
 silly-bean-version = "2"
-silly-collection-version = "27.1"
+silly-collection-version = "28"
 silly-io-version = "3.1"
 silly-strings-version = "9.1"
 test-object-version = "8.2"
