update gradle to new version 8.10.1
- added new test dependecy gradleTestKit
- added new gradle plugin with id 'java-gradle-plugin'
- added new test dependecy assertj-core
- update of test dependency test-object to new major version 9

--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ plugins {
     id 'signing'
     alias(libs.plugins.gradle.versions.plugin)
     alias(libs.plugins.grgit.gradle)
+    alias(libs.plugins.java.gradle.plugin)
     alias(libs.plugins.license.gradle.plugin)
     alias(libs.plugins.lombok.plugin)
     alias(libs.plugins.spotless.plugin.gradle)
