update gradle to new version 8.10.2
- update of dependency silly-bean to new major version 3.0
- update of dependency silly-collection to new major version 28.1
- update of test dependency mockito-core to new version 5.14.1
- update of test dependency junit-jupiter-api to new version 5.11.2
- dependencies are managed now over bundles

--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -1,22 +1,13 @@
 
 dependencies {
-
-    compileOnly libs.lombok
-    annotationProcessor libs.lombok
-    testCompileOnly libs.lombok
-    testAnnotationProcessor libs.lombok
-
-    implementation libs.commons.text
-    implementation libs.silly.io
-    implementation libs.file.worker
-    implementation libs.silly.strings
-    implementation libs.silly.collection
-    implementation libs.silly.bean
-
+    // Note: use of bundles...
+    compileOnly libs.bundles.compile.only
+    annotationProcessor libs.bundles.annotation.processor
+    testCompileOnly libs.bundles.test.compile.only
+    testAnnotationProcessor libs.bundles.test.annotation.processor
+    implementation libs.bundles.core.dependencies
+    testImplementation libs.bundles.unit.testing
+    testRuntimeOnly libs.bundles.test.runtime.only
     // test kit for gradle
     testImplementation gradleTestKit()
-    // Note: use of bundles...
-    testImplementation libs.bundles.unit.testing
-    testRuntimeOnly libs.junit.platform.launcher
-
 }
