--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 ######################
 # project properties #
 ######################
-projectVersion=3.0
+projectVersion=3.1-SNAPSHOT
 groupPackage=io.github.astrapi69
 projectSourceCompatibility=21
 projectInceptionYear=2023
